1.2.0
-add completed icon tile
-add state information like surplus and delayed

1.1.0
-add charge Watt and charged kWh to tile info during charging
-add valid login detection
-change refresh timer from 300 to 60 sec

1.0.0
-initial release juli 2020 