@@ -1,6 +1,7 @@
 1.2.0
 -add completed icon tile
 -add state information like surplus and delayed
+-add tile icon pause during surplus waiting
 
 1.1.0
 -add charge Watt and charged kWh to tile info during charging
